--- a/package.json
+++ b/package.json
@@ -9,13 +9,70 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/masked-view": "*",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/auth": "^20.5.0",
+    "@react-native-firebase/firestore": "^20.5.0",
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/drawer": "6.4.1",
+    "@react-navigation/elements": "1.3.3",
+    "@react-navigation/material-bottom-tabs": "6.2.1",
+    "@react-navigation/material-top-tabs": "6.2.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/native-stack": "6.6.1",
+    "@react-navigation/stack": "6.2.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "@types/react": "~18.2.79",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-blur": "~13.0.2",
+    "expo-file-system": "~17.0.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-select-dropdown": "^1.1.3",
     "expo-status-bar": "~1.12.1",
+    "i18next": "^23.15.1",
+    "install": "^0.13.0",
+    "npm": "^10.8.3",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.2",
+    "react-native": "0.74.5",
+    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-dropdownalert": "^5.1.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-lightbox-v2": "^0.9.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "6.3.0",
+    "react-native-paper": "^4.7.2",
+    "react-native-ratings": "^8.1.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-select-dropdown": "^4.0.1",
+    "react-native-simple-stepper": "^4.1.0",
+    "react-native-size-matters": "^0.4.2",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-stepper-ui": "^0.0.9",
+    "react-native-svg": "15.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-tab-view": "^3.0.0",
+    "react-native-touch-ripple": "^0.0.4",
+    "react-native-web": "~0.19.10",
+    "react-navigation-header-buttons": "^6.3.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0",
+    "@types/react-native": "^0.72.8",
+    "expo-cli": "^6.3.12"
   },
   "private": true
 }
